--- a/bolt.css
+++ b/bolt.css
@@ -2,7 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
+}
+.container{
+    width: 100%;
+    height: 6000px;
+    border: 1px solid black;
+    /* position: relative; */
 }
 .main{
     width: 100%;
@@ -12,11 +18,13 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    
 }
 .overlay{
     width: 100%;
     height: 100%;
     background-color: rgba(9, 9, 9, 0.634);
+    /* position: relative; */
 }
 .nav-bar{
     width: 100%;
@@ -112,6 +120,8 @@
     border-radius: 5px;
     margin-top: 20px;
     margin-left: 62%;
+    position: sticky;
+    bottom: 10px;
 }
 .cookie > p{
     font-size: 14px;
@@ -152,9 +162,9 @@
 }
 .earn{
     width: 100%;
-    height: 800px;
-    border: 1px solid black;
-    background-color: whitesmoke;
+    height: 730px;
+    /* border: 1px solid black; */
+    background-color: white;
 }
 .earn-head{
     width: 50%;
@@ -192,6 +202,9 @@
     color: rgb(87, 87, 87);
     font-size: 16px;
 }
+.bars >a:hover{
+    background-color: rgba(179, 176, 176, 0.37);
+}
 .bars > span{
     background-color: rgb(5, 5, 5);
     border: 1px solid rgba(128, 128, 128, 0.925);
@@ -201,21 +214,22 @@
 }
 .bars > span > a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: whitesmoke;
 } 
 .earn-main{
     width: 90%;
-    height: 500px;
+    height: 40px;
     margin-top: 10px;
-    margin-left: 5%;
-    border: 1px solid black;
+    margin-left: 7%;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
 }
 .earn-left{
     width: 50%;
-    height: 480px;
-    border: 1px solid black;
+    height: 470px;
+    margin-top: 10px;
+    /* border: 1px solid black; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -223,29 +237,614 @@
 .earn-left > img{
     width: 95%;
     height: 95%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 10px;
 }
 .earn-right{
     width: 45%;
     height: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .rgt-header{
     width: 100%;
     height: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     align-items: center;
 }
 .rgt-header > h3{
     font-size: 30px;
-    color: black;
+    color: rgb(36, 35, 35);
 }
 .earn-txt{
     width: 100%;
     height: 120px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 10px;
     margin-bottom: 10px;
+    display: flex;
+    gap: 15px;
+}
+.smll-txt > h4{
+    
+    font-size: 20px;
+    color: rgb(36, 35, 35);
+}
+.smll-txt > p{
+    color: rgb(99, 98, 98);
+    font-size: 17px;
+}
+.earn-txt > span >i{
+    font-size: 20px;
+    color:rgb(49, 170, 110) ;
+}
+.earn-right > a{
+    background-color:whitesmoke;
+    padding: 10px 20px;
+    margin-top: 20px;
+    text-decoration: none;
+    border-radius: 20px;
+    color: rgb(36, 35, 35);
+    text-align: center;
+    font-weight: bolder;
+}
+.services{
+    width: 100%;
+    height: 550px;
+    /* border: 1px solid black; */
+}
+.service-header{
+    width: 90%;
+    height: 60px;
+    /* border: 1px solid black; */
+    margin-left: 5%;
+}
+.service-header > h1{
+    font-size: 50px;
+    text-align: center;
+    font-weight: bolder;
+}
+.service-box-wrap{
+    width: 85%;
+    height: 400px;
+    /* border: 1px solid black; */
+    margin-top: 40px;
+    margin-left: 7%;
+    display: flex;
+    justify-content: space-between;
+    /* gap: 10px; */
+    flex-wrap: wrap;
+}
+.service-bx{
+    width: 32%;
+    height: 45%;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+    background-color: whitesmoke;
+    position: relative;
+}
+.service-bx:hover{
+    
+}
+.inner{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.inner > h4{
+    font-size: 25px;
+    font-weight: bolder;
+    color: rgb(36, 35, 35);
+}
+.inner > p{
+    color:  rgb(99, 98, 98);
+    font-size: 17px;
+}
+.img-one{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.img-two{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.img-three{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.img-four{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.img-five{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.img-six{
+    width: 130px;
+    height: 120px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-right-radius: 20px;
+}
+.cities{
+    width:100% ;
+    height: 679px;
+    /* border: 1px solid black; */
+    display: flex;
+}
+.city-left{
+    width: 50%;
+    height: 100%;
+    /* border: 1px solid black; */
+}
+
+.left-up{
+    width: 70%;
+    height: 30%;
+    margin-left: 15%;
+    /* border: 1px solid black; */
+}
+.left-up > h1{
+    font-size: 30px;
+    font-weight: bolder;
+    color: (36, 35, 35)
+}
+.left-up > p{
+    color: rgb(99, 98, 98);
+    font-size: 20px;
+    line-height: 1.5;
+}
+.left-down{
+    width: 70%;
+    height: 70%;
+    margin-left: 15%;
+    /* border: 1px solid black; */
+}
+.city-left-txt{
+    width: 100%;
+    height: 120px;
+    /* border: 1px solid black; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    gap: 15px;
+}
+.left-smll > h4{
+    
+    font-size: 20px;
+    color: rgb(36, 35, 35);
+}
+.left-smll> p{
+    color: rgb(99, 98, 98);
+    font-size: 17px;
+}
+.city-left-txt> span >i{
+    font-size: 20px;
+    color:rgb(49, 170, 110) ;
+}
+.left-down> a{
+    background-color:whitesmoke;
+    padding: 10px 20px;
+    margin-top: 20px;
+    text-decoration: none;
+    border-radius: 20px;
+    color: rgb(36, 35, 35);
+    text-align: center;
+    font-weight: bolder;
+}
+.city-right{
+    width: 50%;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    gap: 15px;
+}
+.pix-one > img{
+    width: 150px;
+    height: 60%;
+    margin-top: 150px;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+}
+.pix-two > img{
+    width: 400px;
+    height: 80%;
+    /* border: 1px solid black; */
+    margin-top: 70px;
+    border-radius: 20px;
+}
+.map-section{
+    width: 100%;
+    height: 1100px;
+    /* border: 1px solid black; */
+    background-color: whitesmoke;
+}
+.map-up{
+    width: 100%;
+    height: 160px;
+    margin-top: 50px;
+    /* border: 1px solid black; */
+}
+.map-up > h1{
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: center;
+    color: rgb(36, 35, 35);
+}
+.map-up > p{
+    font-size: 20px;
+    color:rgb(32, 32, 32) ;
+    text-align: center;
+    line-height: 1.5;
+    /* font-weight: bold; */
+}
+.map-img > img{
+    width: 80%;
+    height: 600px;
+    /* border: 1px solid red; */
+    margin-left: 10%;
+}
+.map-down{
+    width: 70%;
+    height: 150px;
+    /* border: 1px solid black; */
+    margin-left: 15%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+.small-icns > i{
+    color: rgb(49, 170, 110);
+    font-size: 30px;
+    line-height: 2;
+}
+.small-icns >h4{
+    font-size: 25px;
+    font-weight: bolder;
+}
+.small-icns >p{
+    font-size: 16px;
+    color: rgb(133, 129, 129);
+}
+.map-section > a{
+    margin-left: 45%;
+    margin-top: 50px;
+    background-color: white;
+    padding: 15px 20px;
+    border-radius: 25px;
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
+.map-section > a:hover{
+    cursor: pointer;
+    background-color: aliceblue;
+}
+.news{
+    width: 100%;
+    height: 500px;
+    /* border: 1px solid black; */
+}
+.news-header{
+    width: 86%;
+    height: 100px;
+    /* border: 1px solid black; */
+    margin-left: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.news-header > h1{
+    font-size: 35px;
+    color: rgb(22, 22, 22);
+    font-weight: bolder;
+}
+.news-header > a {
+    text-decoration: none;
+    color: rgb(22, 22, 22);
+    font-size: 20px;
+    font-weight: bolder;
+    margin-right: 10px;
+}
+.news-header > a > i{
+    font-size: 20px;
+    font-weight: bolder;
+}
+.news-main{
+    width: 86%;
+    height: 350px;
+    /* border: 1px solid black; */
+    margin-left: 10%;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    gap: 10px;
+}
+.news-bxs{
+    width: 35%;
+    height: 100%;
+    /* border: 1px solid black; */
+    
+}
+.news-bxs > img{
+    width: 100%;
+    height: 65%;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+}
+.news-bxs > h4{
+    font-size: 22px;
+    font-weight: bolder;
+    color: rgb(27, 27, 27);
+    margin-bottom: 20px;
+
+}
+.news-bxs > p{
+    font-size: 13px;
+    color:rgb(27, 27, 27) ;
+}
+.downloads{
+    width: 100%;
+    height: 700px;
+    /* border: 1px solid black; */
+}
+.download-header{
+    width: 80%;
+    height: 150px;
+    /* border: 1px solid black; */
+    margin-left: 10%;
+}
+.download-header > h1{
+    font-size: 40px;
+    text-align: center;
+}
+.two-btns{
+    width: 200px;
+    height: 50px;
+    /* border: 1px solid gray; */
+    margin-left: 40%;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.two-btns > a{
+    text-decoration: none;
+    background-color: black;
+    padding: 10px 15px;
+    border-radius: 20px;
+    color: white;
+}
+.two-btns > span > a{
+    text-decoration: none;
+    /* background-color: whitesmoke; */
+    padding: 10px 15px;
+    border-radius: 20px;
+    color: rgb(27, 27, 27);
+    border: 1px solid grey;
+    font-size: 16px;
+    /* font-weight: bolder; */
+}
+.download-hero{
+    width: 90%;
+    height: 500px;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+    background-color:rgb(35, 184, 110) ;
+    margin-left: 5%;
+    display: flex;
+}
+.left-download{
+    width: 50%;
+    height: 100%;
+    /* border: 1px solid black; */
+}
+.left-download > h2{
+    margin-top: 150px;
+    margin-left: 100px;
+    font-size: 35px;
+    line-height: 1.2;
+    font-weight: bolder;
+    color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+}
+.left-download > p{
+    margin-left:100px ;
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    /* line-height: 2; */
+    margin-bottom: 50px;
+}
+.left-download > a{
+    text-decoration: none;
+    background-color: white;
+    color: rgb(19, 19, 19);
+    padding: 15px 20px;
+    border-radius: 25px;
+    margin-left: 100px;
+}
+.right-download{
+    width: 50%;
+    height: 100%;
+    /* border: 1px solid black; */
+    position: relative
+}
+.right-download > img{
+    width:60%;
+    height: 90%;
+    position: absolute;
+    bottom: 0;
+    left: 150px;
+    display: flex;
+    justify-content: center;
+}
+.footer{
+    width: 100%;
+    height: 697px;
+    /* border: 1px solid black; */
+}
+.footer-menu{
+    width: 90%;
+    height: 450px;
+    margin-left: 5%;
+    /* border: 1px solid black; */
+    margin-top: 40px;
+    display: flex;
+}
+.foot-img > img{
+    width: 120px;
+    height: 70px;
+    /* border: 1px solid black;  */
+}
+.button{
+    width: 150px;
+    height: 150px;
+    /* border: 1px solid black;  */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 30px;
+
+}
+.button > a{
+    background-color: rgb(245, 245, 245);
+    padding: 10px 15px;
+    border-radius: 20px;
+    border: 1px solid grey;
+    text-decoration: none;
+    color: rgb(19, 19, 19);
+    display: flex;
+    /* flex-direction: column; */
+    gap: 10px;
+    
+}
+.menu-1{
+    width:30% ;
+    height: 100%;
+    /* border: 1px solid black; */
+}
+.menu-1 > a{
+    display: flex;
+    flex-direction: column;
+    line-height: 2.5;
+    text-decoration: none;
+    font-size: 17px;
+    color: rgb(29, 29, 29);
+}
+.menu-1 > p {
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: rgb(22, 22, 22);
+    font-weight: bold;
+    margin-top: 20px;
+
+}
+.footer-icon{
+    width: 90%;
+    height: 70px;
+    margin-left: 5%;
+    border-bottom: 1px solid rgb(224, 222, 222);
+    margin-top: 20px;
+    /* border-bottom: rgb(131, 51, 51); */
+    display: flex;
+    justify-content: space-between;
+}
+.icon-left{
+    width: 300px;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.small-icn{
+    width: 40px;
+    height: 40px;
+    background-color: rgb(235, 235, 235);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    
+}
+.small-icn > i{
+    font-size: 20px;
+    color: rgb(22, 22, 22);
+
+}
+.icon-right{
+    width: 500px;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.icon-right > a{
+    background-color: rgb(235, 235, 235);
+    padding: 5px 10px;
+    border-radius: 20px;
+    text-decoration: none;
+    color:rgb(22, 22, 22);
+    font-size: 14px;
+    font-weight: bold;
+    gap: 10px;
+
+}
+.footer-links{
+    width: 90%;
+    height: 70px;
+    margin-left: 5%;
+    /* border: 1px solid black; */
+    margin-top: 20px;
+    /* border-bottom: rgb(131, 51, 51); */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.copyright > a{
+    text-decoration: none;
+    font-size: 20px;
+    color: grey;
+    font-weight: bold;
+}
+.policy{
+    width: 500px;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.policy > a{
+    text-decoration: none;
+    color: grey;
+    font-size: 16px;
+    
 }
